--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+			<groupId>io.kubernetes</groupId>
+			<artifactId>client-java</artifactId>
+			<version>9.0.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
